syntax = "proto3";
package ipc;

message ErrorMessage { string message = 1; }

enum WooglesError {
  DEFAULT = 0;
  TOURNAMENT_NEGATIVE_MAX_BYE_PLACEMENT = 1001;
  TOURNAMENT_NEGATIVE_MIN_PLACEMENT = 1002;
  TOURNAMENT_NEGATIVE_GIBSON_SPREAD = 1003;
  TOURNAMENT_EMPTY_ROUND_CONTROLS = 1004;
  TOURNAMENT_SET_ROUND_CONTROLS_AFTER_START = 1005;
  TOURNAMENT_ELIMINATION_PAIRINGS_MIX = 1006;
  TOURNAMENT_DISCONTINUOUS_INITIAL_FONTES = 1007;
  TOURNAMENT_INVALID_INITIAL_FONTES_ROUNDS = 1008;
  TOURNAMENT_INVALID_ELIMINATION_PLAYERS = 1009;
  TOURNAMENT_ROUND_NUMBER_OUT_OF_RANGE = 1010;
  TOURNAMENT_NONEXISTENT_PLAYER = 1011;
  TOURNAMENT_NONAMENDMENT_PAST_RESULT = 1012;
  TOURNAMENT_FUTURE_NONBYE_RESULT = 1013;
  TOURNAMENT_NIL_PLAYER_PAIRING = 1014;
  TOURNAMENT_NONOPPONENTS = 1015;
  TOURNAMENT_MIXED_VOID_AND_NONVOID_RESULTS = 1016;
  TOURNAMENT_NONEXISTENT_PAIRING = 1017;
  TOURNAMENT_UNINITIALIZED_GAMES = 1018;
  TOURNAMENT_TIEBREAK_INVALID_GAME_INDEX = 1019;
  TOURNAMENT_GAME_INDEX_OUT_OF_RANGE = 1020;
  TOURNAMENT_RESULT_ALREADY_SUBMITTED = 1021;
  TOURNAMENT_NONEXISTENT_RESULT_AMENDMENT = 1022;
  TOURNAMENT_GIBSON_CAN_CATCH = 1023;
  TOURNAMENT_CANNOT_ASSIGN_BYE = 1024;
  TOURNAMENT_INTERNAL_BYE_ASSIGNMENT = 1025;
  TOURNAMENT_INCORRECT_PAIRINGS_LENGTH = 1026;
  TOURNAMENT_PAIRINGS_ASSIGNED_BYE = 1027;
  TOURNAMENT_SUSPENDED_PLAYER_UNREMOVED = 1028;
  TOURNAMENT_PAIRING_INDEX_OUT_OF_RANGE = 1029;
  TOURNAMENT_SUSPENDED_PLAYER_PAIRED = 1030;
  TOURNAMENT_PLAYER_NOT_PAIRED = 1031;
  TOURNAMENT_PLAYER_ALREADY_EXISTS = 1032;
  TOURNAMENT_ADD_PLAYERS_LAST_ROUND = 1033;
  TOURNAMENT_PLAYER_INDEX_OUT_OF_RANGE = 1034;
  TOURNAMENT_PLAYER_ALREADY_REMOVED = 1035;
  TOURNAMENT_REMOVAL_CREATES_EMPTY_DIVISION = 1036;
  TOURNAMENT_NEGATIVE_GIBSON_ROUND = 1037;
  TOURNAMENT_ROUND_NOT_COMPLETE = 1038;
  TOURNAMENT_FINISHED = 1039;
  TOURNAMENT_NOT_STARTABLE = 1040;
  TOURNAMENT_ROUND_NOT_READY = 1041;
  TOURNAMENT_SET_GAME_ROUND_NUMBER = 1042;
  TOURNAMENT_ALREADY_READY = 1043;
  TOURNAMENT_SET_READY_MULTIPLE_IDS = 1044;
  TOURNAMENT_SET_READY_PLAYER_NOT_FOUND = 1045;
  TOURNAMENT_NO_LOSER = 1046;
  TOURNAMENT_NO_WINNER = 1047;
  TOURNAMENT_UNPAIRED_PLAYER = 1048;
  TOURNAMENT_INVALID_PAIRING = 1049;
  TOURNAMENT_INVALID_SWISS = 1050;
  TOURNAMENT_ZERO_GAMES_PER_ROUND = 1051;
  TOURNAMENT_EMPTY_NAME = 1052;
  TOURNAMENT_NOT_STARTED = 1053;
  TOURNAMENT_NONEXISTENT_DIVISION = 1054;
  TOURNAMENT_NIL_DIVISION_MANAGER = 1055;
  TOURNAMENT_SET_NON_FUTURE_ROUND_CONTROLS = 1056;
  TOURNAMENT_ADD_DIVISION_AFTER_START = 1057;
  TOURNAMENT_INVALID_DIVISION_NAME = 1058;
  TOURNAMENT_DIVISION_ALREADY_EXISTS = 1059;
  TOURNAMENT_DIVISION_REMOVAL_AFTER_START = 1060;
  TOURNAMENT_DIVISION_REMOVAL_EXISTING_PLAYERS = 1061;
  TOURNAMENT_PLAYER_ID_CONSTRUCTION = 1062;
  TOURNAMENT_EXECUTIVE_DIRECTOR_EXISTS = 1063;
  TOURNAMENT_DIRECTOR_EXISTS = 1064;
  TOURNAMENT_NO_DIVISIONS = 1065;
  TOURNAMENT_GAME_CONTROLS_NOT_SET = 1066;
  TOURNAMENT_INCORRECT_START_ROUND = 1067;
  TOURNAMENT_PAIR_NON_FUTURE_ROUND = 1068;
  TOURNAMENT_DELETE_NON_FUTURE_ROUND = 1069;
  TOURNAMENT_DIVISION_NOT_FINISHED = 1070;
  TOURNAMENT_NOT_EXACTLY_ONE_EXECUTIVE_DIRECTOR = 1071;
  TOURNAMENT_EXECUTIVE_DIRECTOR_REMOVAL = 1072;
  TOURNAMENT_INVALID_FUTURE_RESULT = 1073;
  TOURNAMENT_SCHEDULED_START_AFTER_END = 1090;
  TOURNAMENT_NOT_FINISHED = 1091;
  TOURNAMENT_OPENCHECKINS_AFTER_START = 1092;
  TOURNAMENT_CHECKINS_CLOSED = 1093;
  TOURNAMENT_NOT_REGISTERED = 1094;
  TOURNAMENT_REGISTRATIONS_CLOSED = 1095;
  TOURNAMENT_ALREADY_STARTED = 1096;
  TOURNAMENT_OPENREGISTRATIONS_AFTER_START = 1097;
  TOURNAMENT_CANNOT_START_CHECKINS_OR_REGISTRATIONS_OPEN = 1098;
  TOURNAMENT_CANNOT_REMOVE_UNCHECKED_IN_IF_CHECKINS_OPEN = 1099;

  PUZZLE_VOTE_INVALID = 1074;
  PUZZLE_GET_RANDOM_PUZZLE_ID_NOT_FOUND = 1075;
  PUZZLE_GET_RANDOM_PUZZLE_NOT_FOUND = 1076;
  PUZZLE_GET_PUZZLE_UUID_NOT_FOUND = 1077;
  PUZZLE_GET_PREVIOUS_PUZZLE_NO_ATTEMPTS = 1078;
  PUZZLE_GET_PREVIOUS_PUZZLE_ATTEMPT_NOT_FOUND = 1079;
  PUZZLE_GET_ANSWER_PUZZLE_UUID_NOT_FOUND = 1080;
  PUZZLE_SUBMIT_ANSWER_PUZZLE_ID_NOT_FOUND = 1081;
  PUZZLE_SUBMIT_ANSWER_SET_CORRECT = 1082;
  PUZZLE_SUBMIT_ANSWER_SET_ATTEMPTS = 1083;
  PUZZLE_SET_PUZZLE_VOTE_ID_NOT_FOUND = 1084;
  PUZZLE_SUBMIT_ANSWER_PUZZLE_ATTEMPT_NOT_FOUND = 1085;
  PUZZLE_GET_PUZZLE_UPDATE_ATTEMPT = 1086;
  PUZZLE_GET_ANSWER_NOT_YET_RATED = 1087;

  USER_UPDATE_NOT_FOUND = 1088;

  GAME_NO_LONGER_AVAILABLE = 1089;
}
